# CollegeEmailStudy

./: README.md  college_email_analysis.ipynb  college_email_data.csv  pyproject.toml
