[tool.poetry]
name = "college_email_analysis"
version = "0.1.0"
description = ""
authors = ["Rohan Satapathy <satapathyrohan13@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
jupyter = "^1.0.0"
pandas = "^1.4.2"
numpy = "^1.22.3"
scipy = "^1.8.0"
ipykernel = "^6.13.0"
seaborn = "^0.11.2"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
